# VisibleHand

./: .dockerignore  .env.example  .gitignore  BENCHMARK_vh_wsm_0.1.md  DATA_SOURCES.md  Dockerfile  METHODOLOGY.md  MODEL_CARD_vh_wsm_0.1.md  Makefile  README.md  TERMS_OF_USE.md  docker-compose.yml  mkdocs.yml  pyproject.toml  railway.json  requirements-prod.txt  requirements.txt
.claude/: launch.json  settings.local.json
.github/workflows/: ci.yml  publish-sdk.yml  test.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_governance_forecast_ci.py  0003_worldstate.py
api/: cache.py  config.py  dependencies.py  main.py  observability.py
api/models/: database.py  schemas.py
api/routers/: calibration.py  dashboard.py  events.py  governance.py  indicators.py  nlp.py  risk.py  worldstate.py
core/calibration/: backtest.py  crisis_dataset.py  evaluation.py  hazard_model.py  optimizer.py  panel.py
core/ingestion/: acled.py  bis.py  centralbank.py  fred.py  gdelt.py  http.py  ilo.py  imf.py  imf_fsi.py  scheduler.py  wgi.py  worldbank.py
core/nlp/: aspect_scorer.py  finbert.py  lexicon.py  parsers.py  sentiment.py
core/scoring/: baseline.py  composite.py  economic.py  governance.py  labels.py  nlp_scorer.py  political.py  regime.py  stats.py
core/worldstate/: __init__.py  analogues.py  embeddings.py  features.py  graph.py  hazards.py  registry.py  schemas.py  service.py  uncertainty.py
docs/: index.md
docs/getting-started/: quickstart.md
docs/methodology/: overview.md
docs/sdk/: python.md
docs/worldstate/: analogues.md  embeddings.md  features.md  hazards.md  limitations.md  overview.md  uncertainty.md
scripts/: build_analogue_index.py  evaluate_worldstate.py  export_finbert_onnx.py  export_static_worldstate.py  materialize_worldstate.py  seed_demo_data.py  smoke_test.py  train_hazard_models.py
sdk/: README.md  pyproject.toml
sdk/visiblehand/: __init__.py
tests/: conftest.py  test_api.py  test_baseline.py  test_calibration.py  test_ingestion.py  test_nlp.py  test_regime.py  test_scoring.py  test_worldstate.py
website/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
website/src/app/: App.tsx  data.tsx
website/src/styles/: fonts.css  theme.css
