[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "visiblehand-server"
version = "0.3.0"
description = "Open political-economic country risk scoring API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["country-risk", "political-risk", "economics", "emerging-markets", "sovereign-risk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9.9"]
ingestion = ["apscheduler>=3.10.4", "tenacity>=8.2.0", "pdfplumber>=0.11.0"]
nlp = ["transformers>=4.40.0", "onnxruntime>=1.18.0"]
observability = ["prometheus_client>=0.20.0", "sentry-sdk>=2.0.0", "structlog>=24.1.0"]
calibration = ["optuna>=3.6.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-env>=1.1.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]
docs = ["mkdocs>=1.6.0", "mkdocs-material>=9.5.0", "mkdocstrings[python]>=0.25.0"]

[project.urls]
Homepage = "https://github.com/nenticul/VisibleHand"
Documentation = "https://visiblehand.readthedocs.io"
Repository = "https://github.com/nenticul/VisibleHand"
"Bug Tracker" = "https://github.com/nenticul/VisibleHand/issues"

[tool.hatch.build.targets.wheel]
packages = ["api", "core", "sdk/visiblehand"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
env = [
    "OPENBLAS_NUM_THREADS=1",
    "OMP_NUM_THREADS=1",
]

[tool.coverage.run]
source = ["api", "core"]
omit = ["*/tests/*", "*/__pycache__/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501", "B008", "UP007"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
