[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "visiblehand"
version = "0.3.0"
description = "Python SDK for the VisibleHand political-economic country risk API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Anes Tamtam"},
]
keywords = ["country-risk", "political-risk", "economic-risk", "sovereign-risk", "fintech"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.urls]
Homepage = "https://github.com/nenticul/VisibleHand"
Documentation = "https://visiblehand.readthedocs.io"
Repository = "https://github.com/nenticul/VisibleHand"
"Bug Tracker" = "https://github.com/nenticul/VisibleHand/issues"

[tool.hatch.build.targets.wheel]
packages = ["visiblehand"]
